# portfolio-website

./: .gitignore  package.json
app/: layout.tsx
backend/: README.md  assistant.py  main.py  pyproject.toml  rag.py  tools.py  utils.py
backend/app/: email_api.py  main.py
backend/portfolio_assistant/core/: assistant.py  config.py  state.py
backend/portfolio_assistant/prompts/: system_prompt.md  test_prompt.md
backend/portfolio_assistant/tools/: db_manager.py  rag.py  tools.py
backend/portfolio_assistant/utils/: utils.py
components/Layout/: Navigation.tsx
components/Views/: ProjectsSection.tsx
frontend/: next.config.ts  package-lock.json  package.json
frontend/.next/dev/: prerender-manifest.json  trace
frontend/.next/dev/cache/: .rscinfo
frontend/.next/dev/server/: server-reference-manifest.js  server-reference-manifest.json
frontend/.next/dev/server/app/: page_client-reference-manifest.js
frontend/.next/dev/static/chunks/: [root-of-the-server]__28bc9c2a._.css  [root-of-the-server]__28bc9c2a._.css.map  _96f05e86._.js  _96f05e86._.js.map  _ebd266e6._.js  _ebd266e6._.js.map  _eed08ae7._.js  _eed08ae7._.js.map  _f3b5c066._.js  _f3b5c066._.js.map  app_page_tsx_607b5035._.js  (+27 more)
frontend/app/: globals.css  page.tsx
frontend/components/Common/: Data.ts  hattec-desc.md  hensoldt-desc.md  hs-aalen-desc.md  thesis-desc.md  tum-desc.md
frontend/components/Layout/: Navigation.tsx
frontend/components/Views/: AboutSection.tsx  ChatSection.tsx  ContactSection.tsx  ProjectsSection.tsx  RotatingText.tsx
frontend/hooks/: useChatBot.ts  useContactForm.ts
(+50 files in other folders)
